--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReaperMC</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
     <div class="container">
@@ -26,36 +28,55 @@
 
         <div class="project-section">
             <div class="project">
-                <h3>wicked-expressions</h3>
-                <p>Superset of <a href="https://github.com/rx-modules/bolt-expressions" class="link" target="_blank">bolt-expressions</a>: A pandas-inspired API designed for crafting expressions within Bolt. Includes features such as runtime variables, comparison support, and more!</p>
-                <div class="project-buttons">
-                    <a href="https://pypi.org/project/wicked-expressions" class="btn btn-pypi" target="_blank">PyPI</a>
-                    <a href="https://github.com/reapermc/wicked-expressions" class="btn btn-pypi" target="_blank">GitHub</a>
-                    <a href="https://reapermc.github.io/wicked-expressions/docs" class="btn btn-pypi" target="_blank">Docs</a>
+                <div class="project-icons">
+                    <img src="resources/wicked_expressions_logo.png" alt="wicked-expressions logo">
+                </div>
+                <div class="project-info">
+                    <h3>wicked-expressions</h3>
+                    <p>Superset of <a href="https://github.com/rx-modules/bolt-expressions" class="link"
+                            target="_blank">bolt-expressions</a>: A pandas-inspired API designed for crafting
+                        expressions within Bolt. Includes features such as runtime variables, comparison support, and
+                        more!</p>
+                    <div class="project-buttons">
+                        <a href="https://pypi.org/project/wicked-expressions" class="btn btn-pypi" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/wicked-expressions" class="btn btn-pypi" target="_blank">GitHub</a>
+                        <!-- <a href="https://reapermc.github.io/wicked-expressions/docs" class="btn btn-pypi" target="_blank">Docs</a> -->
+                    </div>
                 </div>
             </div>
-
             <div class="project">
-                <h3>lightning-rod</h3>
-                <p>A function library designed to pythonize Minecraft's commands and enhance your development process with additional high-level functions.</p>
-                <div class="project-buttons">
-                    <a href="https://pypi.org/project/lightning-rod" class="btn btn-pypi" target="_blank">PyPI</a>
-                    <a href="https://github.com/reapermc/lightning-rod" class="btn btn-pypi" target="_blank">GitHub</a>
-                    <a href="https://reapermc.github.io/lightning-rod/docs" class="btn btn-pypi" target="_blank">Docs</a>
+                <div class="project-icons">
+                    <img src="resources/lightning_rod_logo.png" alt="lightning-rod logo">
+                </div>
+                <div class="project-info">
+                    <h3>lightning-rod</h3>
+                    <p>A function library designed to pythonize Minecraft's commands and enhance your development
+                        process with additional high-level functions.</p>
+                    <div class="project-buttons">
+                        <a href="https://pypi.org/project/lightning-rod" class="btn btn-pypi" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/lightning-rod" class="btn btn-pypi" target="_blank">GitHub</a>
+                        <!-- <a href="https://reapermc.github.io/lightning-rod/docs" class="btn btn-pypi" target="_blank">Docs</a> -->
+                    </div>
                 </div>
             </div>
-
             <div class="project">
-                <h3>crankshaft</h3>
-                <p>A flow control library featuring a comprehensive event handler system, enabling seamless event-driven development!</p>
-                <div class="project-buttons">
-                    <a href="https://pypi.org/project/crankshaft" class="btn btn-pypi" target="_blank">PyPI</a>
-                    <a href="https://github.com/reapermc/crankshaft" class="btn btn-pypi" target="_blank">GitHub</a>
-                    <a href="https://reapermc.github.io/crankshaft/docs" class="btn btn-pypi" target="_blank">Docs</a>
+                <div class="project-icons">
+                    <img src="resources/crankshaft_logo.png" alt="crankshaft logo">
+                </div>
+                <div class="project-info">
+                    <h3>crankshaft</h3>
+                    <p>A flow control library featuring a comprehensive event handler system, enabling seamless
+                        event-driven development!</p>
+                    <div class="project-buttons">
+                        <a href="https://pypi.org/project/crankshaft" class="btn btn-pypi" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/crankshaft" class="btn btn-pypi" target="_blank">GitHub</a>
+                        <a href="https://reapermc.github.io/crankshaft/docs" class="btn btn-pypi" target="_blank">Docs</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
 </body>
+
 </html>
