--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
     <div class="container">
         <div id="header">
-            <div id="brand">
+            <a href="https://reapermc.github.io" id="brand">
                 <img id="logo" src="resources/logo.png" alt="ReaperMC Logo">
-                <h1>ReaperMC</h1>
-            </div>
+                <h1 id="brand-label">ReaperMC</h1>
+            </a>
 
             <div id="navbar">
-                <a href="https://reapermc.github.io/temp0" class="nav-item">temp</a>
-                <a href="https://reapermc.github.io/temp1" class="nav-item">temp</a>
+                <a href="reapermc.github.io/about" class="nav-item">About</a>
+                <a href="https://github.com/reapermc" class="nav-item">GitHub</a>
                 <a href="https://discord.gg/vDxU2M7QGX" class="nav-item" target="_blank">Discord</a>
             </div>
         </div>
@@ -33,14 +33,14 @@
                 </div>
                 <div class="project-info">
                     <h3>wicked-expressions</h3>
-                    <p>Superset of <a href="https://github.com/rx-modules/bolt-expressions" class="link"
+                    <p>Superset of <a href="https://github.com/rx-modules/bolt-expressions" class="link link-highlight"
                             target="_blank">bolt-expressions</a>: A pandas-inspired API designed for crafting
                         expressions within Bolt. Includes features such as runtime variables, comparison support, and
                         more!</p>
                     <div class="project-buttons">
-                        <a href="https://pypi.org/project/wicked-expressions" class="btn btn-pypi" target="_blank">PyPI</a>
-                        <a href="https://github.com/reapermc/wicked-expressions" class="btn btn-pypi" target="_blank">GitHub</a>
-                        <!-- <a href="https://reapermc.github.io/wicked-expressions/docs" class="btn btn-pypi" target="_blank">Docs</a> -->
+                        <a href="https://pypi.org/project/wicked-expressions" class="btn btn-hollow" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/wicked-expressions" class="btn btn-hollow" target="_blank">GitHub</a>
+                        <!-- <a href="https://reapermc.github.io/wicked-expressions/docs" class="btn btn-orange" target="_blank">Docs</a> -->
                     </div>
                 </div>
             </div>
@@ -50,12 +50,11 @@
                 </div>
                 <div class="project-info">
                     <h3>lightning-rod</h3>
-                    <p>A function library designed to pythonize Minecraft's commands and enhance your development
-                        process with additional high-level functions.</p>
+                    <p>A function library designed to pythonize Minecraft's commands and enhance your development process with additional high-level functions.</p>
                     <div class="project-buttons">
-                        <a href="https://pypi.org/project/lightning-rod" class="btn btn-pypi" target="_blank">PyPI</a>
-                        <a href="https://github.com/reapermc/lightning-rod" class="btn btn-pypi" target="_blank">GitHub</a>
-                        <!-- <a href="https://reapermc.github.io/lightning-rod/docs" class="btn btn-pypi" target="_blank">Docs</a> -->
+                        <a href="https://pypi.org/project/lightning-rod" class="btn btn-hollow" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/lightning-rod" class="btn btn-hollow" target="_blank">GitHub</a>
+                        <!-- <a href="https://reapermc.github.io/lightning-rod/docs" class="btn btn-orange" target="_blank">Docs</a> -->
                     </div>
                 </div>
             </div>
@@ -68,12 +67,17 @@
                     <p>A flow control library featuring a comprehensive event handler system, enabling seamless
                         event-driven development!</p>
                     <div class="project-buttons">
-                        <a href="https://pypi.org/project/crankshaft" class="btn btn-pypi" target="_blank">PyPI</a>
-                        <a href="https://github.com/reapermc/crankshaft" class="btn btn-pypi" target="_blank">GitHub</a>
-                        <a href="https://reapermc.github.io/crankshaft/docs" class="btn btn-pypi" target="_blank">Docs</a>
+                        <a href="https://pypi.org/project/crankshaft" class="btn btn-hollow" target="_blank">PyPI</a>
+                        <a href="https://github.com/reapermc/crankshaft" class="btn btn-hollow" target="_blank">GitHub</a>
+                        <a href="https://reapermc.github.io/crankshaft/docs" class="btn btn-hollow" target="_blank">Docs</a>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="project-separator"></div>
+        <div class="page-footer">
+            <p>Made with ♡ by <a href="https://github.com/ArcticYeti" class="link-highlight">ArcticYeti</a></p>
         </div>
     </div>
 
