--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </a>
 
             <div id="navbar">
-                <a href="reapermc.github.io/about" class="nav-item">About</a>
+<!--                 <a href="reapermc.github.io/about" class="nav-item">About</a> -->
                 <a href="https://github.com/reapermc" class="nav-item">GitHub</a>
-                <a href="https://discord.gg/vDxU2M7QGX" class="nav-item" target="_blank">Discord</a>
+<!--                 <a href="https://discord.gg/vDxU2M7QGX" class="nav-item" target="_blank">Discord</a> -->
             </div>
         </div>
 
@@ -77,7 +77,7 @@
 
         <div class="project-separator"></div>
         <div class="page-footer">
-            <p>Made with ♡ by <a href="https://github.com/ArcticYeti" class="link-highlight">ArcticYeti</a></p>
+            <p>Made with ♡ by <a href="https://github.com/thehuglet" class="link-highlight">thehuglet</a></p>
         </div>
     </div>
 
